Only render scroll container when scroll is enabled

--- a/templates/focusList.hbs
+++ b/templates/focusList.hbs
@@ -1,5 +1,7 @@
-<div class="nano">
-  <div class="nano-content" region="list">
-    <ul></ul>
+{{#if scroll}}
+  <div class="nano">
+    <div class="nano-content" region="list"></div>
   </div>
-</div>
+{{else}}
+  <div region="list"></div>
+{{/if}}
